# Mininode

./: .gitignore  CMakeLists.txt  README.md  server.cpp  server.js
mininode/: CMakeLists.txt  console.cpp  console.h  data.cpp  data.h  nodejs.h  socket.cpp  socket.h  tcpserver.cpp  tcpserver.h
